--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
     "rc": "1.0.1",
+    "request": "^2.69.0",
     "sails": "~0.12.0",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.0"
