--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
+    "cors": "^2.7.1",
     "errorhandler": "^1.4.3",
+    "express": "^4.13.4",
+    "express-winston": "^1.3.0",
     "icalendar": "^0.7.1",
     "method-override": "^2.3.5",
+    "moment": "^2.12.0",
     "mysql": "^2.10.2",
     "node-schedule": "^1.1.0",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "sequelize": "^3.21.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
