--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.12.0",
     "mysql": "^2.10.2",
     "node-schedule": "^1.1.0",
+    "pdf2json": "^1.1.5",
     "request": "^2.69.0",
     "sequelize": "^3.21.0",
     "winston": "^2.2.0"
