--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "async": "^1.5.2",
-    "body-parser": "^1.15.0",
-    "compression": "^1.6.1",
+    "async": "^2.0.0-rc.5",
+    "body-parser": "^1.15.1",
+    "compression": "^1.6.2",
     "cors": "^2.7.1",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
-    "express-winston": "^1.3.0",
+    "express-brute": "^0.6.0",
+    "express-brute-sequelize": "0.0.5",
+    "express-jwt": "^3.4.0",
+    "express-winston": "^1.3.1",
+    "helmet": "^2.1.1",
     "icalendar": "^0.7.1",
-    "method-override": "^2.3.5",
-    "moment": "^2.12.0",
+    "method-override": "^2.3.6",
+    "moment": "^2.13.0",
     "morgan": "^1.7.0",
     "mysql": "^2.10.2",
     "node-schedule": "^1.1.0",
-    "pdf2json": "^1.1.5",
-    "request": "^2.69.0",
-    "sequelize": "^3.21.0",
+    "request": "^2.72.0",
+    "sequelize": "^3.23.2",
+    "socket.io": "^1.4.6",
     "winston": "^2.2.0"
   },
   "devDependencies": {},
