--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-brute-sequelize": "0.0.5",
     "express-jwt": "^3.4.0",
     "express-winston": "^1.3.1",
+    "getstream": "^3.4.1",
     "helmet": "^2.1.1",
     "icalendar": "^0.7.1",
     "method-override": "^2.3.6",
