--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "async": "^2.0.0-rc.5",
-    "body-parser": "^1.15.1",
-    "compression": "^1.6.2",
-    "cors": "^2.7.1",
-    "errorhandler": "^1.4.3",
-    "express": "^4.13.4",
-    "express-brute": "^0.6.0",
-    "express-brute-sequelize": "0.0.5",
-    "express-jwt": "^3.4.0",
-    "express-winston": "^1.3.1",
-    "getstream": "^3.4.1",
-    "helmet": "^2.1.1",
+    "async": "^2.5.0",
+    "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
+    "compression": "^1.7.0",
+    "cors": "^2.8.4",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.3",
+    "express-brute": "^1.0.1",
+    "express-brute-sequelize": "0.0.7",
+    "express-jwt": "^5.3.0",
+    "express-winston": "^2.4.0",
+    "getstream": "^3.5.0",
+    "helmet": "^3.8.1",
     "icalendar": "^0.7.1",
-    "method-override": "^2.3.6",
-    "moment": "^2.13.0",
-    "morgan": "^1.7.0",
-    "mysql": "^2.10.2",
-    "node-schedule": "^1.1.0",
-    "request": "^2.72.0",
-    "sequelize": "^3.23.2",
-    "socket.io": "^1.4.6",
-    "winston": "^2.2.0"
+    "jwt-simple": "^0.5.1",
+    "method-override": "^2.3.9",
+    "moment": "^2.18.1",
+    "morgan": "^1.8.2",
+    "mysql2": "^1.3.6",
+    "node-schedule": "^1.2.3",
+    "request": "^2.81.0",
+    "sequelize": "^4.4.2",
+    "socket.io": "^2.0.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {},
   "scripts": {
