remove unneeded dependencies
Signed-off-by: A. van der Pluijm <info@urbanlink.nl>

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "repository": "https://github.com/urbanlink/vooot-api",
   "dependencies": {
     "async": "^2.5.0",
     "body-parser": "^1.17.2",
-    "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.0",
     "cors": "^2.8.4",
     "errorhandler": "^1.5.0",
@@ -15,10 +15,6 @@
     "express-brute-sequelize": "0.0.7",
     "express-jwt": "^5.3.0",
     "express-winston": "^2.4.0",
-    "getstream": "^3.5.0",
-    "helmet": "^3.8.1",
-    "icalendar": "^0.7.1",
-    "jwt-simple": "^0.5.1",
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
@@ -26,7 +22,6 @@
     "node-schedule": "^1.2.3",
     "request": "^2.81.0",
     "sequelize": "^4.4.2",
-    "socket.io": "^2.0.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {},
