update person endpoint
Signed-off-by: A. van der Pluijm <info@urbanlink.nl>

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-brute-sequelize": "0.0.7",
     "express-jwt": "^5.3.0",
     "express-winston": "^2.4.0",
+    "helmet": "^3.8.1",
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
@@ -29,7 +30,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "sequelize db:migrate && sequelize db:seed:all && node server.js"
   },
   "author": "",
   "license": "ISC"
