--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/urbanlink/vooot-api",
   "dependencies": {
     "async": "^2.5.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "cors": "^2.8.4",
@@ -16,6 +17,7 @@
     "express-jwt": "^5.3.0",
     "express-winston": "^2.4.0",
     "helmet": "^3.8.1",
+    "jsonwebtoken": "^7.4.2",
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
@@ -23,7 +25,9 @@
     "node-schedule": "^1.2.3",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "request": "^2.81.0",
+    "sendgrid": "^5.2.0",
     "sequelize": "^4.4.2",
     "winston": "^2.3.1"
   },
