--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-brute": "^1.0.1",
     "express-brute-sequelize": "0.0.7",
     "express-jwt": "^5.3.0",
+    "express-validator": "^3.2.1",
     "express-winston": "^2.4.0",
     "helmet": "^3.8.1",
     "jsonwebtoken": "^7.4.2",
