--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-jwt": "^5.3.0",
     "express-validator": "^3.2.1",
     "express-winston": "^2.4.0",
+    "getstream-node": "^1.5.0",
     "helmet": "^3.8.1",
     "jsonwebtoken": "^7.4.2",
     "method-override": "^2.3.9",
