--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "getstream": "^3.9.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
